# ALHE-greedy_algorithm

./: .gitignore  Makefile  README.md  main.py  make_plot.py  pyproject.toml  summaries.py
data/: architektura_urbanistyka-input.txt  automatyka_elektronika_elektrotechnika-input.txt  filozofia-input.txt  informatyka_techniczna_telekomunikacja-input.txt  inzynieria_biomedyczna-input.txt  inzynieria_chemiczna-input.txt  inzynieria_ladowa_transport-input.txt  inzynieria_materialowa-input.txt  inzynieria_mechaniczna-input.txt  inzynieria_srodowiska_gornictwo_energetyka-input.txt  matematyka-input.txt  nauki_chemiczne-input.txt  nauki_fizyczne-input.txt  nauki_prawne-input.txt  nauki_zarzadzaniu_jakosci-input.txt
greedy/: main.py
greedy/implementation/: author.py  data_loader.py  greedy.py  publication.py  settings.py  sorter.py
greedy/implementation/loader/: data_loader.py
src/: main.py
src/greedy/: author.py  check_limits.py  data_loader.py  data_preparation.py  greedy.py  output_converter.py  publication.py  settings.py  tools.py
src/implementation/: data_preparation.py  greedy.py  publication.py
src/tests/: test_author.py  test_data_loader.py  test_data_preparation.py  test_publication.py
