[tool.poetry]
name = "alhe"
version = "0.1.0"
description = "implementation of greedy algorithm"
authors = ["Ewelina <ewelkos.chmielewska@gmail.com>", "Mateusz"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.0"
pandas = "^0.24.2"
numpy = "^1.17"
jsonschema = "^3.0"
matplotlib = "^3.1"
seaborn = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
Sphinx = "^1.8"
sphinxcontrib-napoleon = "^0.7.0"
sphinx_rtd_theme = "^0.4.2"
sphinx-autodoc-typehints = "^1.6"
termcolor = "^1.1"
flake8 = "^3.7"
isort = "^4.3"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         
    | \.git         
    | \.venv
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

